# scopeland

./: .gitignore  README.md  build.sh  notes.txt  std.scl
docs/: DOC.md
examples/: std.scl  turing.scl
extensions/scopeland-highlighting/: language-configuration.json  package.json
extensions/scopeland-highlighting/syntaxes/: scopeland.tmLanguage.json
interp/: dune-project  scopeland.opam
interp/lib/: absyn.ml  dune  lexer.mll  parser.mly  typing.ml
interp/src/: dune  scopeland.ml
